--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
   "name": "hamlogtool",
   "version": "0.0.1",
   "description": "Converts between various ham logging formats",
+  "bin": {
+    "hamlogtool": "./bin/index.js"
+  },
   "main": "index.js",
   "repository": "git@github.com:nmote/hamlogtool.git",
   "author": "nmote",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "csv": "^5.3.2"
+  }
 }
