--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "private": true,
   "scripts": {
     "test": "jest src/",
-    "build": "babel src -d lib"
+    "build": "babel src -d lib",
+    "flow": "flow"
   },
   "dependencies": {
     "csv": "^5.3.2"
@@ -22,6 +23,7 @@
     "@babel/core": "^7.13.8",
     "@babel/preset-env": "^7.13.9",
     "@babel/preset-flow": "^7.12.13",
+    "flow-bin": "^0.146.0",
     "jest": "^26.6.3"
   }
 }
