--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "scripts": {
     "test": "jest src/",
     "build": "babel src -d lib",
-    "flow": "flow"
+    "flow": "flow",
+    "lint": "eslint src/"
   },
   "dependencies": {
     "csv": "^5.3.2"
@@ -21,8 +22,11 @@
   "devDependencies": {
     "@babel/cli": "^7.13.0",
     "@babel/core": "^7.13.8",
+    "@babel/eslint-parser": "^7.13.8",
     "@babel/preset-env": "^7.13.9",
     "@babel/preset-flow": "^7.12.13",
+    "eslint": "^7.21.0",
+    "eslint-plugin-jest": "^24.1.8",
     "flow-bin": "^0.146.0",
     "jest": "^26.6.3"
   }
