--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "test": "jest src/",
     "build": "babel src -d lib",
     "flow": "flow",
-    "lint": "eslint src/"
+    "lint": "eslint src/",
+    "check-format": "prettier --check .",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "csv": "^5.3.2"
@@ -28,6 +30,7 @@
     "eslint": "^7.21.0",
     "eslint-plugin-jest": "^24.1.8",
     "flow-bin": "^0.146.0",
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "prettier": "2.2.1"
   }
 }
