--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "hamlogtool",
+  "name": "hamlogs",
   "version": "0.0.1",
   "description": "Converts between various ham logging formats",
   "bin": {
-    "hamlogtool": "./bin/index.js"
+    "hamlogs": "./bin/index.js"
   },
   "main": "index.js",
   "repository": "git@github.com:nmote/hamlogtool.git",
