--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@babel/preset-env": "^7.13.9",
     "@babel/preset-flow": "^7.12.13",
     "eslint": "^7.21.0",
+    "eslint-plugin-flowtype": "^5.3.1",
     "eslint-plugin-jest": "^24.1.8",
     "flow-bin": "^0.146.0",
     "jest": "^26.6.3",
