--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "bin": {
     "hamlogs": "./bin/index.js"
   },
-  "main": "index.js",
+  "main": "lib/index.js",
   "repository": "git@github.com:nmote/hamlogs.git",
   "author": "nmote",
   "license": "MIT",
