--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "prepublishOnly": "yarn run build"
   },
   "dependencies": {
-    "csv": "^5.3.2"
+    "csv-parse": "^4.15.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.10",
