--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-flowtype": "^5.3.1",
     "eslint-plugin-jest": "^24.2.0",
     "flow-bin": "^0.146.0",
+    "flow-typed": "^3.3.1",
     "jest": "^26.6.3",
     "prettier": "2.2.1"
   }
