--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "prepublishOnly": "yarn run build"
   },
   "dependencies": {
-    "csv-parse": "^4.15.3"
+    "papaparse": "^5.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.10",
