--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
     "@babel/cli": "^7.13.10",
     "@babel/core": "^7.13.10",
     "@babel/eslint-parser": "^7.13.10",
+    "@babel/plugin-transform-react-jsx": "^7.16.7",
     "@babel/preset-env": "^7.13.10",
     "@babel/preset-flow": "^7.12.13",
-    "eslint": "^7.22.0",
-    "eslint-plugin-flowtype": "^5.4.0",
-    "eslint-plugin-jest": "^24.3.2",
+    "eslint": "^8.7.0",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-jest": "^25.7.0",
     "flow-bin": "^0.169.0",
     "flow-typed": "^3.3.1",
     "jest": "^26.6.3",
